--- a/css/styles.css
+++ b/css/styles.css
@@ -122,11 +122,27 @@ img {
 }
 /* hero */
 .hero {
-  background-color: var(--dark-bg-color);
+  max-width: 1600px;
+  height: 600px;
+  margin: 0 auto;
+  /* background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/Hero-image.jpg); */
+  background-image: url(../images/Hero-image.jpg);
+  /* background-color: var(--dark-bg-color);
+  /* background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; */
   text-align: center;
 
   padding-top: 200px;
   padding-bottom: 200px;
+}
+.hero::before {
+  background-color: rgba(47, 48, 58, 0.4);
 }
 .hero-title {
   width: 696px;
