--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body {
   --hd-text-color: #212121;
   --main-text-color: #757575;
   --white-text-color: #ffffff;
+  --white-bg-color: #ffffff;
   --logo-color: #000000;
   --border-forheader-color: #ececec;
   --border-cards-color: #eeeeee;
@@ -16,6 +17,7 @@ body {
   --dark-bg-color: #2f303a;
   --light-bg-color: #f5f4fa;
   --accent-color: #2196f3;
+  --border-color: #afb1b8;
 }
 img {
   display: block;
@@ -125,24 +127,23 @@ img {
   max-width: 1600px;
   height: 600px;
   margin: 0 auto;
-  /* background-image: linear-gradient(
+  background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/Hero-image.jpg); */
-  background-image: url(../images/Hero-image.jpg);
-  /* background-color: var(--dark-bg-color);
-  /* background-repeat: no-repeat;
+    url(../images/Hero-image.jpg);
+  background-color: var(--dark-bg-color);
+  background-repeat: no-repeat;
   background-position: center;
-  background-size: cover; */
+  background-size: cover;
   text-align: center;
 
   padding-top: 200px;
   padding-bottom: 200px;
 }
 .hero::before {
-  background-color: rgba(47, 48, 58, 0.4);
+  background-color: rgba(47, 48, 58);
 }
 .hero-title {
   width: 696px;
@@ -171,6 +172,7 @@ img {
 }
 .work.list {
   display: flex;
+  flex-wrap: wrap;
 }
 .work-item:not(:last-child) {
   margin-right: 30px;
@@ -194,16 +196,42 @@ img {
   display: flex;
   margin-right: -30px;
 }
-.features-list > .item {
-  flex-basis: calc(100% / 4 - 30px);
-  margin-right: 30px;
-}
 /* .features-list {
   display: flex;
 }
-.features-list .item + .item {
+.features-list .features-item + .features-item {
   margin-left: 30px;
 } */
+.features-item {
+  flex-basis: calc(100% / 4 - 30px);
+  margin-right: 30px;
+}
+.features-item::before {
+  content: "";
+  display: block;
+  height: 120px;
+
+  background-color: var(--light-bg-color);
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 30px;
+}
+.features-item.icon-antenna::before {
+  background-image: url("../images/icons.svg/antenna.svg");
+  background-size: 70px;
+}
+.features-item.icon-clock::before {
+  background-image: url("../images/icons.svg/clock.svg");
+  background-size: 70px;
+}
+.features-item.icon-diagram::before {
+  background-image: url("../images/icons.svg/diagram.svg");
+  background-size: 70px;
+}
+.features-item.icon-astronaut::before {
+  background-image: url("../images/icons.svg/astronaut.svg");
+  background-size: 70px;
+}
 .features-text {
   font-size: 14px;
   line-height: 1.71;
@@ -217,6 +245,7 @@ img {
 }
 .team {
   display: flex;
+  flex-wrap: wrap;
   background-color: var(--light-bg-color);
 
   text-align: center;
@@ -229,7 +258,7 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   padding-bottom: 30px;
-  background-color: var(--white-text-color);
+  background-color: var(--white-bg-color);
 }
 .team-member-heading {
   color: var(--hd-text-color);
@@ -244,6 +273,28 @@ img {
   font-size: 16px;
   line-height: 1.19;
 }
+/* section about clients */
+.clients {
+  padding: 94px 0;
+}
+.clients-list {
+  display: flex;
+  /* justify-content: space-between; */
+  flex-wrap: wrap;
+}
+.clients-item {
+  flex-basis: calc(100% / 6 - 30px);
+}
+.clients-item:not(:last-child) {
+  margin-right: 30px;
+}
+.client-logo {
+  min-width: 170px;
+  padding: 16px 32px;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+}
+
 /* section-footer */
 .section-footer {
   background-color: var(--dark-bg-color);
@@ -284,6 +335,54 @@ img {
 .footer-contact:hover,
 .footer-contact:focus {
   color: var(--accent-color);
+}
+.footer-container {
+  display: flex;
+}
+.address-block {
+  max-width: 231px;
+  margin-right: 70px;
+}
+.socials-text {
+  display: block;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  margin-bottom: 20px;
+}
+.footer-socials {
+  display: flex;
+}
+.socials-item {
+  display: inline-block;
+  height: 44px;
+  width: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 50%;
+}
+.socials-item + .socials-item {
+  margin-left: 10px;
+}
+.socials-item.instagram {
+  background-image: url("../images/icons.svg/footer-instagram.svg");
+}
+.socials-item.twitter {
+  background-image: url("../images/icons.svg/footer-twitter.svg");
+}
+.socials-item.facebook {
+  background-image: url("../images/icons.svg/footer-facebook.svg");
+}
+.socials-item.linkedin {
+  background-image: url("../images/icons.svg/footer-linkedin.svg");
+}
+.socials-item:hover {
+  background-color: var(--accent-color);
 }
 /* Button */
 .button {
