--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,8 @@ img {
   letter-spacing: 0.02em;
   text-decoration: none;
 }
-.info-nav .link:hover {
+.info-nav .link:hover,
+.info-nav .link:focus {
   color: var(--accent-color);
 }
 .info-nav .link {
@@ -356,7 +357,7 @@ img {
 .footer-socials {
   display: flex;
 }
-.socials-item {
+.socials-icon {
   display: inline-block;
   height: 44px;
   width: 44px;
@@ -366,22 +367,23 @@ img {
   background-position: center;
   border-radius: 50%;
 }
-.socials-item + .socials-item {
+.socials-icon + .socials-icon {
   margin-left: 10px;
 }
-.socials-item.instagram {
+.socials-icon.instagram {
   background-image: url("../images/icons.svg/footer-instagram.svg");
 }
-.socials-item.twitter {
+.socials-icon.twitter {
   background-image: url("../images/icons.svg/footer-twitter.svg");
 }
-.socials-item.facebook {
+.socials-icon.facebook {
   background-image: url("../images/icons.svg/footer-facebook.svg");
 }
-.socials-item.linkedin {
+.socials-icon.linkedin {
   background-image: url("../images/icons.svg/footer-linkedin.svg");
 }
-.socials-item:hover {
+.socials-icon:hover,
+.socials-icon:focus {
   background-color: var(--accent-color);
 }
 /* Button */
@@ -412,6 +414,8 @@ img {
 .button.btn-portfolio:focus {
   color: var(--white-text-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* modifying filter */
 .portfolio-filter {
@@ -460,6 +464,11 @@ img {
 
   margin-right: 30px;
   margin-bottom: 30px;
+}
+.flex-element:hover,
+.flex-element:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .flex-element:nth-child(3n) {
   margin-right: 0;
