--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
   --dark-bg-color: #2f303a;
   --light-bg-color: #f5f4fa;
   --accent-color: #2196f3;
-  --border-color: #afb1b8;
+  --main-icon-color: #afb1b8;
 }
 img {
   display: block;
@@ -124,6 +124,15 @@ img {
   display: block;
   padding: 30px 0;
 }
+.icon-envelope {
+  margin-right: 10px;
+  fill: currentColor;
+}
+
+.icon-smartphone {
+  margin-right: 10px;
+  fill: currentColor;
+}
 /* hero */
 .hero {
   max-width: 1600px;
@@ -196,6 +205,7 @@ img {
 }
 .features-list {
   display: flex;
+  flex-wrap: wrap;
   margin-right: -30px;
 }
 /* .features-list {
@@ -208,7 +218,7 @@ img {
   flex-basis: calc(100% / 4 - 30px);
   margin-right: 30px;
 }
-.features-item::before {
+/* .features-item::before {
   content: "";
   display: block;
   height: 120px;
@@ -217,11 +227,20 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   margin-bottom: 30px;
+} */
+.features-thumb {
+  width: 270px;
+  height: 120px;
+  background-color: var(--light-bg-color);
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.features-item.icon-antenna::before {
+/* .features-item.icon-antenna::before {
   background-image: url("../images/icons.svg/antenna.svg");
   background-size: 70px;
-}
+} */
 .features-item.icon-clock::before {
   background-image: url("../images/icons.svg/clock.svg");
   background-size: 70px;
@@ -252,14 +271,13 @@ img {
 
   text-align: center;
 }
-.team-member:not(:first-child) {
-  margin-left: 30px;
+.team-member:not(:last-child) {
+  margin-right: 30px;
 }
 .team-member {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  padding-bottom: 30px;
   background-color: var(--white-bg-color);
 }
 .team-member-heading {
@@ -272,8 +290,39 @@ img {
   margin-bottom: 10px;
 }
 .team span {
+  display: block;
+  margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.19;
+}
+.socials-block {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+.socials-icons:not(:last-child) {
+  margin-right: 10px;
+}
+.socials-icons {
+  display: block;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: var(--white-bg-color);
+  text-align: center;
+  padding: 12px;
+  color: var(--main-icon-color);
+}
+.socials-icons:hover,
+.socials-icons:focus {
+  background-color: var(--accent-color);
+  color: var(--white-text-color);
+}
+.icon-instagram,
+.icon-twitter,
+.icon-facebook,
+.icon-linkedin {
+  fill: currentColor;
 }
 /* section about clients */
 .clients {
@@ -281,22 +330,32 @@ img {
 }
 .clients-list {
   display: flex;
-  /* justify-content: space-between; */
   flex-wrap: wrap;
+  margin-right: -30px;
 }
 .clients-item {
   flex-basis: calc(100% / 6 - 30px);
-}
-.clients-item:not(:last-child) {
-  margin-right: 30px;
-}
-.client-logo {
   min-width: 170px;
+  margin-right: 30px;
   padding: 16px 32px;
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--main-icon-color);
   border-radius: 4px;
+  color: var(--main-icon-color);
+}
+/* .clients-item:not(:last-child) {  ольтернатива для calc, щоб не додавати -30рх у .clients-list
+  margin-right: 30px;
+} */
+.clients-item:hover,
+.clients-item:focus {
+  color: var(--accent-color);
+}
+.clients-item-icon {
+  fill: currentColor;
 }
 
+.clients-item:hover {
+  border: 1px solid var(--accent-color);
+}
 /* section-footer */
 .section-footer {
   background-color: var(--dark-bg-color);
@@ -350,23 +409,26 @@ img {
 
   margin-bottom: 20px;
 }
-.footer-socials {
+.footer-socials-group {
   display: flex;
 }
-.socials-icon {
-  display: inline-block;
+.footer-socials {
+  display: flex;
   height: 44px;
   width: 44px;
   background-color: rgba(255, 255, 255, 0.1);
   background-size: 20px;
-  background-repeat: no-repeat;
-  background-position: center;
+  /* background-repeat: no-repeat;
+  background-position: center; */
   border-radius: 50%;
+  justify-content: center;
+  align-items: center;
 }
-.socials-icon + .socials-icon {
+.footer-socials + .footer-socials {
   margin-left: 10px;
 }
-.socials-icon.instagram {
+
+/* .socials-icon.instagram {
   background-image: url("../images/icons.svg/footer-instagram.svg");
 }
 .socials-icon.twitter {
@@ -377,9 +439,9 @@ img {
 }
 .socials-icon.linkedin {
   background-image: url("../images/icons.svg/footer-linkedin.svg");
-}
-.socials-icon:hover,
-.socials-icon:focus {
+} */
+.footer-socials:hover,
+.footer-socials:focus {
   background-color: var(--accent-color);
 }
 /* Button */
