--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,8 @@ img {
   color: var(--accent-color);
 }
 .info-nav .link {
-  display: block;
+  display: flex;
+  align-items: center;
   padding: 30px 0;
 }
 .icon-envelope {
